配置文件更新v1.1

--- a/xuecheng-plus-checkcode/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-checkcode/src/main/resources/bootstrap.yml
@@ -16,9 +16,9 @@ spring:
           - data-id: swagger-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
-          - data-id: logging-${spring.profiles.active}.yaml
-            group: xuecheng-plus-common
-            refresh: true
+#          - data-id: logging-${spring.profiles.active}.yaml
+#            group: xuecheng-plus-common
+#            refresh: true
           - data-id: redis-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
