--- a/xuecheng-plus-gateway/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-gateway/src/main/resources/bootstrap.yml
@@ -12,9 +12,9 @@ spring:
         group: xuecheng-plus-project
         file-extension: yaml
         refresh-enabled: true
-        shared-configs:
-          - data-id: logging-${spring.profiles.active}.yaml
-            group: xuecheng-plus-common
-            refresh: true
+#        shared-configs:
+#          - data-id: logging-${spring.profiles.active}.yaml
+#            group: xuecheng-plus-common
+#            refresh: true
   profiles:
     active: dev
