--- a/xuecheng-plus-learning/xuecheng-plus-learning-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-learning/xuecheng-plus-learning-api/src/main/resources/bootstrap.yml
@@ -22,9 +22,9 @@ spring:
           - data-id: swagger-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
-          - data-id: logging-${spring.profiles.active}.yaml
-            group: xuecheng-plus-common
-            refresh: true
+#          - data-id: logging-${spring.profiles.active}.yaml
+#            group: xuecheng-plus-common
+#            refresh: true
           - data-id: feign-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
