--- a/xuecheng-plus-media/xuecheng-plus-media-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-media/xuecheng-plus-media-api/src/main/resources/bootstrap.yml
@@ -21,9 +21,9 @@ spring:
           - data-id: swagger-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
-          - data-id: logging-${spring.profiles.active}.yaml
-            group: xuecheng-plus-common
-            refresh: true
+#          - data-id: logging-${spring.profiles.active}.yaml
+#            group: xuecheng-plus-common
+#            refresh: true
   profiles:
     active: dev
 
