--- a/xuecheng-plus-system/xuecheng-plus-system-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-system/xuecheng-plus-system-api/src/main/resources/bootstrap.yml
@@ -1,30 +1,40 @@
-server:
-  servlet:
-    context-path: /system
-  port: 63110
-#微服务配置
 spring:
   application:
     name: system-api
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://43.142.93.94:3306/xc_system?serverTimezone=UTC&allowPublicKeyRetrieval=true&userUnicode=true&useSSL=false&
-    username: root
-    password: ybs15737679290
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://43.142.93.94:3306/xc_system?serverTimezone=UTC&userUnicode=true&useSSL=false&
+#    username: root
+#    password: ybs15737679290
   cloud:
     nacos:
       server-addr: 43.142.93.94:8848
       discovery:
         namespace: dev
         group: xuecheng-plus-project
-# 日志文件配置路径
-logging:
-  config: classpath:log4j2-dev.xml
+      config:
+        namespace: dev
+        group: xuecheng-plus-project
+        file-extension: yaml
+        refresh-enabled: true
+        extension-configs:
+          - data-id: user-service-${spring.profiles.active}.yaml
+            group: xuecheng-plus-project
+            refresh: true
+        shared-configs:
+          - data-id: swagger-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+          - data-id: feign-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+          - data-id: redis-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+          - data-id: rabbitmq-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
 
-# swagger 文档配置
-swagger:
-  title: "学成在线系统管理"
-  description: "系统管理接口"
-  base-package: com.xuecheng.system
-  enabled: true
-  version: 1.0.0
+  profiles:
+    active: dev
+
