--- a/xuecheng-plus-system/xuecheng-plus-system-service/pom.xml
+++ b/xuecheng-plus-system/xuecheng-plus-system-service/pom.xml
@@ -17,6 +17,14 @@
             <artifactId>xuecheng-plus-system-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
 
         <!-- MySQL 驱动 -->
         <dependency>
