配置文件更新v1.1

--- a/xuecheng-plus-learning/xuecheng-plus-learning-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-learning/xuecheng-plus-learning-api/src/main/resources/bootstrap.yml
@@ -7,10 +7,10 @@ spring:
     nacos:
       server-addr: 43.142.93.94:8848
       discovery:
-        namespace: dev
+        namespace: 885a5dae-c75f-4249-84c8-c585c73e204b
         group: xuecheng-plus-project
       config:
-        namespace: dev
+        namespace: 885a5dae-c75f-4249-84c8-c585c73e204b
         group: xuecheng-plus-project
         file-extension: yaml
         refresh-enabled: true
